--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "8080:8080"  # HTTP/HTTPS Proxy (需要认证)
       - "1080:1080"  # SOCKS5 Proxy (需要认证)
       - "1081:1081"  # SOCKS5 Proxy (无需认证，用于 FoxyProxy)
+    extra_hosts:
+      - "gitlab.oa.acelink.cc:192.168.101.200"
     networks:
       vpcbr:
         ipv4_address: 10.73.0.5
